--- a/config/database.yml
+++ b/config/database.yml
@@ -1,18 +1,15 @@
 default: &default
   adapter: postgresql
   encoding: unicode
-  user: mydatabase
-  password: mydatabase
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  timeout: 5000
 
 development:
   <<: *default
-  database: mydatabase
+  database: Rails_budget_app_development
 
 test:
   <<: *default
-  database: mydatabase
+  database: Rails_budget_app_test
 
 production:
   <<: *default
